--- a/release-please-config.json
+++ b/release-please-config.json
@@ -14,6 +14,7 @@
       "exclude-paths": ["ldotel"]
     },
     "ldotel" : {
+      "package-name": "ldotel",
       "release-type" : "go",
       "tag-separator": "/",
       "versioning" : "default",
